--- a/2.bart-large-xsum-multinews.ipynb
+++ b/2.bart-large-xsum-multinews.ipynb
@@ -206,17 +206,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "AmUOv29OKEdH"
-   },
-   "source": [
-    "## Loading dataset error\n",
-    "\n",
-    "Sometimes when loading the dataset wile in GPU enviorment it will give the error that it cannot find the *samsum* dataset. The workaround is to load the dataset while in CPU mode then save it localy or on you drive. After that just switch back to GPU and load the dataset from the local file using *load_from_disk()*"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -359,8 +348,6 @@
    ],
    "source": [
     "data = load_dataset('multi_news')\n",
-    "#data.save_to_disk('/content/samsum')\n",
-    "#data = load_from_disk(\"/content/drive/MyDrive/samsum\")\n",
     "metric = load_metric('rouge')\n",
     "model_checkpoints = 'facebook/bart-large-xsum'"
    ]
@@ -383,9 +370,7 @@
     "id": "guZ_e3gNLTjd"
    },
    "source": [
-    "## Data tokenization\n",
-    "\n",
-    "**max_input** and **max_target** can variy depending on the available computing power"
+    "## Data tokenization"
    ]
   },
   {
@@ -589,17 +574,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "AvMOVIBiMpOo"
-   },
-   "source": [
-    "## If memory problems\n",
-    "\n",
-    "- sample data to smaller sizes"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -770,15 +744,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "bo6DGtCZL_Wb"
-   },
-   "source": [
-    "Depending on computing power, batch size can go as low as 1 if necessary"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -793,7 +758,7 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = 1"
+    "batch_size = 32"
    ]
   },
   {
@@ -964,7 +929,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "  ········································\n"
